fixed the composer config to the proper "type"

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
     "name": "gladney/gcfa-wp-plugin",
     "description": "Branding and set-up plugin for all GCFA Wordpress sites",
-    "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "David Paul",
-            "email": "enlightenedpie@users.noreply.github.com"
+            "name": "David Paul Crouch",
+            "email": "david.crouch@gladney.org"
         }
     ],
     "type": "wordpress-plugin",
